# pollution_monitoring

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/c02/: CMakeLists.txt  c02.c  c02.h
components/c02/scd30/: CMakeLists.txt
components/display/: CMakeLists.txt  display.c  display.h  idf_component.yml
components/dust/: CMakeLists.txt  dust.c  dust.h
components/scd30/: CMakeLists.txt  c02.h  scd30.c  sensirion_i2c_esp32_config.h  sensirion_i2c_hal.c
main/: CMakeLists.txt  app_data.h  c02.c  ca_cert.h  display.c  dust.c  main.c  mqtt.c  mqtt.h  oled_task.c  oled_task.h  scd30_task.c  sdkconfig.defaults  sps30_task.c  wifi.c  с02.h
main/Dust particle sensor - Arda/: CMakeLists.txt  main.c
